[gd_scene load_steps=9 format=3 uid="uid://b7foap0nhr7n0"]

[ext_resource type="FontFile" uid="uid://csv62pf5suogx" path="res://font/xolonium/Xolonium-Bold.ttf" id="1_ekm6r"]
[ext_resource type="Script" path="res://script/species_screen.gd" id="1_l2mel"]
[ext_resource type="PackedScene" uid="uid://brayaanbjj2q1" path="res://scene/element_menu.tscn" id="2_6ir38"]
[ext_resource type="StyleBox" uid="uid://dx8pdckt4l1rb" path="res://resource/buttonstyle.tres" id="3_07m8k"]
[ext_resource type="Texture2D" uid="uid://b1hken8ex51bd" path="res://asset/splash_backgrounds/main_menu_background.png" id="3_podyo"]
[ext_resource type="Texture2D" uid="uid://o8jxufx0n72p" path="res://asset/panels/minimal_wide_panel.png" id="4_hveuy"]
[ext_resource type="Texture2D" uid="uid://xd1fiy4k57j6" path="res://asset/emblems/human_emblem.png" id="5_1q4cf"]
[ext_resource type="Texture2D" uid="uid://bylylf6hfuovj" path="res://asset/button_icons/standard_menu_button.png" id="7_q4ee2"]

[node name="SpeciesMenu" type="CanvasLayer"]

[node name="SpeciesScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_l2mel")
continue_screen = ExtResource("2_6ir38")

[node name="MainMenuBackground" type="Sprite2D" parent="SpeciesScreen"]
position = Vector2(960, 540)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_podyo")

[node name="MinimalWidePanel" type="Sprite2D" parent="SpeciesScreen"]
position = Vector2(1088, 544)
scale = Vector2(2.74776, 2.24299)
texture = ExtResource("4_hveuy")

[node name="EmblemSprite" type="Sprite2D" parent="SpeciesScreen"]
visible = false
position = Vector2(160, 192)
texture = ExtResource("5_1q4cf")

[node name="Title" type="Label" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 320.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 72
text = "CHARACTER CREATION : SPECIES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeciesDescription" type="RichTextLabel" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 344.0
offset_top = 240.0
offset_right = 1832.0
offset_bottom = 560.0
theme_override_fonts/bold_font = ExtResource("1_ekm6r")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Select a [b]Species[/b] from the list on the left. Each [b]Species[/b] has their own set of bonuses and starting stats which will be listed below. The stats currently listed below are the base values required to max out a stat. When a stat is [color=\"green\"]GREEN[/color], the stat has more than the default amount. When a stat is [color=\"red\"]RED[/color], the stat has less than the default amount. The default amount represents a guranteed max by endgame when assigning [b]Attribute Points[/b]. You can also increase these stats using armor, outfit, rings, and artifacts."

[node name="SpeciesBonus1" type="RichTextLabel" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 448.0
offset_top = 576.0
offset_right = 1792.0
offset_bottom = 640.0
theme_override_fonts/bold_font = ExtResource("1_ekm6r")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Bonus 1 will appear here."

[node name="SpeciesBonus2" type="RichTextLabel" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 448.0
offset_top = 616.0
offset_right = 1792.0
offset_bottom = 680.0
theme_override_fonts/bold_font = ExtResource("1_ekm6r")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Bonus 2 will appear here."

[node name="SpeciesBonus3" type="RichTextLabel" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 448.0
offset_top = 656.0
offset_right = 1792.0
offset_bottom = 720.0
theme_override_fonts/bold_font = ExtResource("1_ekm6r")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "Bonus 3 will appear here."

[node name="SpeciesStatGrid" type="GridContainer" parent="SpeciesScreen"]
top_level = true
layout_mode = 0
offset_left = 344.0
offset_top = 768.0
offset_right = 1832.0
offset_bottom = 1008.0
theme_override_constants/h_separation = 85
theme_override_constants/v_separation = 40
columns = 4

[node name="HumanButton" type="Button" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 292.0
offset_right = 304.0
offset_bottom = 360.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_07m8k")
theme_override_styles/hover = ExtResource("3_07m8k")
theme_override_styles/pressed = ExtResource("3_07m8k")
theme_override_styles/focus = ExtResource("3_07m8k")
toggle_mode = true
text = "HUMAN"
icon = ExtResource("7_q4ee2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MekaButton" type="Button" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 360.0
offset_right = 304.0
offset_bottom = 428.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_07m8k")
theme_override_styles/hover = ExtResource("3_07m8k")
theme_override_styles/pressed = ExtResource("3_07m8k")
theme_override_styles/focus = ExtResource("3_07m8k")
toggle_mode = true
text = "MEKA"
icon = ExtResource("7_q4ee2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DaemonButton" type="Button" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 428.0
offset_right = 304.0
offset_bottom = 496.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_07m8k")
theme_override_styles/hover = ExtResource("3_07m8k")
theme_override_styles/pressed = ExtResource("3_07m8k")
theme_override_styles/focus = ExtResource("3_07m8k")
toggle_mode = true
text = "DAEMON"
icon = ExtResource("7_q4ee2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SylphButton" type="Button" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 496.0
offset_right = 304.0
offset_bottom = 564.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_07m8k")
theme_override_styles/hover = ExtResource("3_07m8k")
theme_override_styles/pressed = ExtResource("3_07m8k")
theme_override_styles/focus = ExtResource("3_07m8k")
toggle_mode = true
text = "SYLPH"
icon = ExtResource("7_q4ee2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="KaijuButton" type="Button" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 564.0
offset_right = 304.0
offset_bottom = 632.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_07m8k")
theme_override_styles/hover = ExtResource("3_07m8k")
theme_override_styles/pressed = ExtResource("3_07m8k")
theme_override_styles/focus = ExtResource("3_07m8k")
toggle_mode = true
text = "KAIJU"
icon = ExtResource("7_q4ee2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ContinueButton" type="Button" parent="SpeciesScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 960.0
offset_right = 304.0
offset_bottom = 1028.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_07m8k")
theme_override_styles/hover = ExtResource("3_07m8k")
theme_override_styles/pressed = ExtResource("3_07m8k")
theme_override_styles/focus = ExtResource("3_07m8k")
disabled = true
text = "CONTINUE"
icon = ExtResource("7_q4ee2")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="SpeciesScreen/HumanButton" to="SpeciesScreen" method="_on_human_button_pressed"]
[connection signal="pressed" from="SpeciesScreen/MekaButton" to="SpeciesScreen" method="_on_meka_button_pressed"]
[connection signal="pressed" from="SpeciesScreen/DaemonButton" to="SpeciesScreen" method="_on_daemon_button_pressed"]
[connection signal="pressed" from="SpeciesScreen/SylphButton" to="SpeciesScreen" method="_on_sylph_button_pressed"]
[connection signal="pressed" from="SpeciesScreen/KaijuButton" to="SpeciesScreen" method="_on_kaiju_button_pressed"]
[connection signal="pressed" from="SpeciesScreen/ContinueButton" to="SpeciesScreen" method="_on_continue_button_pressed"]
